--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -1,20 +1,17 @@
-#bg-color-3blue {
+.bg-color-3blue {
     background-color: #0E72A1;
 }
-
-#textLight {
-    background-color: #0E72A1;
-    color: white;
-}
-
-.text25
-{
-    color: white;
-    font-size: 25px;
-    text-decoration: none;
-}
-
 .img1paddingb
 {
     padding-bottom: 10px;
+}
+
+.btn{
+    background-image:url('../../imagenes/carrito.svg');
+    background-repeat:no-repeat;
+    border: 0;
+    height:60px;
+    width:70px;
+    background-size: 50px 50px;
+    background-position:center;
 }
