--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -1,9 +1,10 @@
 .bg-color-3blue {
     background-color: #0E72A1;
 }
-.img1paddingb
+.img1
 {
     padding-bottom: 10px;
+    margin-right: 40px;
 }
 
 .btn{
@@ -14,4 +15,23 @@
     width:70px;
     background-size: 50px 50px;
     background-position:center;
+}
+
+.imgMarca
+{
+    width: 80px;
+    height: 80px;
+    border: white;
+    border-radius: 10px;
+}
+.contenedorFlexboxMarcas
+{
+    display: flex;
+    flex-direction: column;
+}
+
+.contenedorFlexboxElementos
+{
+    display: flex;
+    flex-direction: row;
 }
