--- a/recursos/estilos/publico/fuentes.css
+++ b/recursos/estilos/publico/fuentes.css
@@ -84,3 +84,10 @@
     font-size: 18px;
     text-decoration: none;
 }
+
+.text16
+{
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+}
