--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -1,5 +1,10 @@
-.bg-color-3blue {
+.bg-color-3blue
+{
     background-color: #0E72A1;
+}
+.bg-color-4blue
+{
+    background-color: #146A93;
 }
 .img1
 {
@@ -7,7 +12,7 @@
     margin-right: 50px;
 }
 
-.btn{
+.btn1{
     background-image:url('../../imagenes/carrito.svg');
     background-repeat:no-repeat;
     border: 0;
