--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -1,40 +1,71 @@
-.bg-color-3blue
-{
+.bg-color-3blue {
     background-color: #0E72A1;
 }
-.bg-color-4blue
-{
+
+.bg-color-4blue {
     background-color: #146A93;
 }
-.img1
-{
+
+.img1 {
     padding-bottom: 10px;
     margin-right: 50px;
 }
 
-.btn1{
-    background-image:url('../../imagenes/carrito.svg');
-    background-repeat:no-repeat;
+.btn1 {
+    background-image: url('../../imagenes/carrito.svg');
+    background-repeat: no-repeat;
     border: 0;
-    height:60px;
-    width:70px;
+    height: 60px;
+    width: 70px;
     background-size: 50px 50px;
-    background-position:center;
+    background-position: center;
 }
 
-.imgMarca
-{
+.imgMarca {
     width: 80px;
     height: 80px;
-    border: white;
-    border-radius: 10px;
 }
 
-.copyright
-{
-    border: #1591CC 2px solid; 
-    width: 70%; 
+.copyright {
+    border: #1591CC 2px solid;
+    width: 70%;
     padding: 20px;
     border-left: 0;
     border-right: 0;
+}
+
+.triangulo {
+    border-bottom: solid transparent 90px;
+    border-left: solid transparent 60px;
+    border-right: solid transparent 60px;
+    border-top: solid #1A89BD 90px;
+    height: 50px;
+    width: 50px;
+    padding: 0px;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    position: absolute;
+}
+
+.triangulo:nth-child(3) 
+{
+    margin-top: 90px;
+}
+.triangulo:nth-child(4) 
+{
+    margin-top: 180px;
+}
+.triangulo:nth-child(5) 
+{
+    margin-top: 270px;
+}
+.triangulo:nth-child(6) 
+{
+    margin-top: 360px;
+}
+.triangulo:nth-child(7) 
+{
+    margin-top: 450px;
 }
