--- a/recursos/estilos/publico/fuentes.css
+++ b/recursos/estilos/publico/fuentes.css
@@ -64,30 +64,25 @@
     font-style: italic;
 }
 
-.text25
-{
+.text25 {
     color: white;
     font-size: 25px;
     text-decoration: none;
 }
 
-.text15
-{
+.text15 {
     color: white;
     font-size: 15px;
     text-decoration: none;
 }
 
-.text18
-{
+.text18 {
     color: white;
     font-size: 18px;
     text-decoration: none;
 }
 
-.text16
-{
-    color: white;
-    font-size: 18px;
+.text48 {
+    font-size: 48px;
     text-decoration: none;
 }
