--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -66,7 +66,6 @@
     height:fit-content;
     background-color:black ;
     margin-bottom: 200px;
-    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,11 +79,22 @@
     width: 100%;
 }
 
-h1,h2
+.vertical-line
 {
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    width: 5px;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    right: 15%;
+}
+
+.vertical-line:nth-child(1)
+{
+    margin-right: 20px;
+}
+
+.vertical-line:nth-child(2)
+{
+    margin-right: 40px;
 }
