--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -24,6 +24,12 @@
     border-right: 0;
 }
 
+#header
+{
+    height: fit-content;
+    width: 100%;
+}
+
 /*.triangulo {
     border-bottom: solid transparent 90px;
     border-left: solid transparent 60px;
@@ -65,7 +71,6 @@
     margin-top: 90px;
     height:fit-content;
     background-color:black ;
-    margin-bottom: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
