--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -24,8 +24,7 @@
     border-right: 0;
 }
 
-#header
-{
+#header {
     height: fit-content;
     width: 100%;
 }
@@ -66,26 +65,23 @@
     margin-top: -450px;
 }*/
 
-.carrusel
-{
+.carrusel {
     margin-top: 90px;
-    height:fit-content;
-    background-color:black ;
+    height: fit-content;
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 
-.carruselA
-{
+.carruselA {
     display: flex;
     justify-content: start;
     width: 100%;
 }
 
-.vertical-line
-{
+.vertical-line {
     width: 5px;
     height: 100%;
     background-color: white;
@@ -94,12 +90,58 @@
     right: 15%;
 }
 
-.vertical-line:nth-child(1)
-{
+.vertical-line:nth-child(1) {
     margin-right: 20px;
 }
 
-.vertical-line:nth-child(2)
-{
+.vertical-line:nth-child(2) {
     margin-right: 40px;
 }
+
+@media screen and (min-width: 667px) {
+    .cards-wrapper {
+        display: flex;
+    }
+
+    .card {
+        margin: 25px;
+        width: calc(100%/5);
+    }
+
+    .image-wrapper {
+        height: 16vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .image-wrapper img {
+
+        width: 16vw;
+        height: 16vw;
+    }
+}
+
+@media screen and (max-width: 666px) {
+    .card:not(:first-child) {
+        display: none;
+    }
+
+    .image-wrapper img {
+        width: 100vw;
+        height: 30vh;
+    }
+
+    .cards-wrapper {
+        display: flex;
+    }
+
+    .image-wrapper {
+        height: 30vh ;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
