--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -144,4 +144,13 @@
         justify-content: center;
     }
 }
-
+.linea
+{
+    background-color: #146A93;
+    width: 100%;
+    height: 3px;
+}
+.a
+{
+    width: 30px;
+}
