slider coleccion más reciente

--- a/recursos/estilos/publico/fuentes.css
+++ b/recursos/estilos/publico/fuentes.css
@@ -91,3 +91,13 @@
     font-size: 35px;
     text-decoration: none;
 }
+
+.clYellowStar
+{
+    color: #FFA700;
+}
+
+.clgr3
+{
+    color: #7D7D7D;
+}
