--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -165,9 +165,7 @@
         margin: 15px;
         margin-left: 30px;
         width: calc(80%/1);
-        height: fit-content;
     }
-
 
     .image-wrapper2 img {
         width: 80vw;
@@ -176,7 +174,7 @@
 
     .image-wrapper2 {
         height: 30vh;
-        width: max-content;
+        width: 100vw;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -187,22 +185,28 @@
     #cardC {
         margin: 15px;
         margin-left: 30px;
-        width: calc(90%/2);
-        height: fit-content;
+        width: calc(90%/3);
     }
 
 
     .image-wrapper2 img {
-        width: 50vw;
-        height: 30vh;
+        width: 30vw;
+        height: 50vh;
+        object-fit: cover;
     }
 
     .image-wrapper2 {
         height: 50vh;
-        width: max-content;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
+}
+
+.lineImgC
+{
+    background-color: #1591CC;
+    width: 100%;
+    height: 4px;
 }
