--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -1,3 +1,16 @@
+.bg-color-1blue {
+    background-color: #1591CC;
+}
+.bg-color-3blue {
+    background-color: #0E72A1;
+}
+.bg-color-4blue {
+    background-color: #146A93;
+}
+.bg-color-5blue {
+    background-color: #0D4560;
+}
+
 .titillium-web-extralight {
     font-family: "Titillium Web", sans-serif;
     font-weight: 200;
@@ -84,6 +97,11 @@
 
 .text48 {
     font-size: 48px;
+    text-decoration: none;
+}
+
+.text40 {
+    font-size: 40px;
     text-decoration: none;
 }
 
