--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -11,6 +11,19 @@
     background-color: #0D4560;
 }
 
+.color-1blue {
+    color: #1591CC;
+}
+.color-3blue {
+    color: #0E72A1;
+}
+.color-4blue {
+    color: #146A93;
+}
+.color-5blue {
+    color: #0D4560;
+}
+
 .titillium-web-extralight {
     font-family: "Titillium Web", sans-serif;
     font-weight: 200;
