--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -90,6 +90,12 @@
     font-style: italic;
 }
 
+.text20 {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+}
+
 .text25 {
     color: white;
     font-size: 25px;
