--- a/recursos/estilos/privado/index.css
+++ b/recursos/estilos/privado/index.css
@@ -13,3 +13,19 @@ body {
     color: white; /* Cambia el color del texto a blanco */
     text-align: center; /* Centra el texto */
 }
+
+/**Clase donde se pondra la animacion */
+.container {
+    animation: transitionIn 1s; 
+}
+/**Animacion de entrada a la pagina */
+@keyframes transitionIn {
+    from {
+     opacity: 0;
+     transform: rotateX(-10deg);
+    }
+    to  {
+     opacity: 1;
+     transform: rotateX(0);
+    }
+}
