--- a/recursos/estilos/privado/plantilla.css
+++ b/recursos/estilos/privado/plantilla.css
@@ -80,9 +80,10 @@ body,html{
 #mainContent
 {
     max-height: 100%;
-    padding-left: 50px;
-    padding-top: 25px;
+    min-height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .img
@@ -126,7 +127,6 @@ li {
     width: 100%;
     overflow: hidden;
     transition: all 0.35s ease-in-out;
-    background-color: #fafbfe;
     overflow:scroll;
 }
 
