--- a/recursos/estilos/privado/panel_principal.css
+++ b/recursos/estilos/privado/panel_principal.css
@@ -3,22 +3,37 @@
     min-height: 100%;
     max-height: 100%;
     width: 100%;
-    background-color: black;
+/* background-color: black;*/
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 90px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 .ItemsContenedorMain
 {
-    min-height: 50vh;
-    max-height: 50vh;
-    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    flex: 1;
+    width: fit-content;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    /*background-color: aquamarine;*/
+    background-color: white;
+    padding: 40px;
+}
+
+.ContenedorSaludo,.ContenedorGrafica
+{
+    height: 100%;
+    width: 100%;
+/* background-color: gray;*/
+    display: flex;
+    justify-items: center;
     justify-content: center;
-    align-items: center;
-    background-color: aquamarine;
 }
