primer diseño de tabla de cliente preliminar y comienzo de detalles cliente

--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -11,6 +11,10 @@
     background-color: #0D4560;
 }
 
+.bg-color-white {
+    background-color: #ffffff;
+}
+
 .color-1blue {
     color: #1591CC;
 }
