--- a/recursos/estilos/privado/panel_principal.css
+++ b/recursos/estilos/privado/panel_principal.css
@@ -37,3 +37,22 @@
     justify-items: center;
     justify-content: center;
 }
+
+/**Clase donde se pondra la animacion */
+.ContenedorT {
+    animation: transitionIn 1s; 
+}
+.ContenedorT {
+    animation: transitionIn 1s; 
+}
+/**Animacion de entrada a la pagina */
+@keyframes transitionIn {
+    from {
+     opacity: 0;
+     transform: rotateX(-10deg);
+    }
+    to  {
+     opacity: 1;
+     transform: rotateX(0);
+    }
+}
