--- a/recursos/estilos/privado/trabajadores.css
+++ b/recursos/estilos/privado/trabajadores.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
 }
@@ -20,6 +21,56 @@
     flex-direction: column;
     /*background-color: aquamarine;*/
     background-color: white;
+}
+
+.ContenedorPestaña
+{
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.nav-item{
+    background-color: #146A93;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    margin-bottom: -5px;
+    color: white;
+}
+.nav-link
+{
+    text-decoration: none;
+    color: white;
+}
+.contenidoP
+{
+    background-color: #1591CC;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+#myTabControl
+{
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+
+.rectangle
+{
+    position: absolute;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #1A89BD;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 .linea1
@@ -35,4 +86,35 @@
 
 .textP{
     color: #146A93;
+}
+
+.tab-pane1
+{
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+
+#tabla
+{
+    min-height: 100%;
+    max-height: 100%;
+    display: flex;
+    flex: 1;
+}
+
+.contenedorBotones
+{
+    width: 100%;
+    min-height: fit-content;
+    max-height: fit-content;
+    position: absolute;
+    bottom: -4%;
+}
+
+.btn2
+{
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #146A93;
 }
