--- a/recursos/estilos/privado/trabajadores.css
+++ b/recursos/estilos/privado/trabajadores.css
@@ -103,7 +103,7 @@
     flex: 1;
 }
 
-.contenedorBotones
+.contenedorBotones,.contenedorBotones2
 {
     width: 100%;
     min-height: fit-content;
@@ -112,9 +112,73 @@
     bottom: -4%;
 }
 
+.contenedorBotones2
+{
+    bottom: 0;
+}
+
 .btn2
 {
     padding-left: 20px;
     padding-right: 20px;
     background-color: #146A93;
+}
+
+#tabla-tab
+{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.ContenedorTotal
+{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 80%;
+    height: 100%;
+}
+
+#agregar
+{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.ContenedorTituloA{
+    margin-top: 20px;
+    width: 100%;
+}
+
+.ContenedorForm
+{
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    padding-bottom: 50px;
+    padding-top: 30px;
+    border-radius: 10px;
+    margin-bottom: 30px
+}
+
+.form-control
+{
+    border: #146A93 solid 1px;
+}
+
+.form1
+{
+    min-width: 100%;
 }
