--- a/recursos/estilos/privado/trabajadores.css
+++ b/recursos/estilos/privado/trabajadores.css
@@ -89,11 +89,11 @@
     max-height: 100%;
 }
 
-#tabla {
+.Contenedor-tabla 
+{
     min-height: 100%;
-    max-height: 100%;
-    display: flex;
-    flex: 1;
+    max-height: 55vh;
+    overflow-y: auto;
 }
 
 .contenedorBotones,
@@ -102,7 +102,7 @@
     min-height: fit-content;
     max-height: fit-content;
     position: absolute;
-    bottom: -4%;
+    bottom: -10%;
 }
 
 .contenedorBotones2 {
@@ -170,8 +170,7 @@
     border: #146A93 solid 1px;
 }
 
-.btn3
-{
+.btn3 {
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 10px;
