--- a/recursos/estilos/privado/clientes.css
+++ b/recursos/estilos/privado/clientes.css
@@ -1,13 +1,87 @@
-.line {
-    border-bottom: 2px solid #0E72A1; 
+.ContenedorT {
+    min-height: 100%;
+    max-height: 100%;
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-.tabla_cabecera{
-    background-color: #0D4560 !important;
-    color: white;
+.ContenedorTitulo {
+    max-height: fit-content;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
 }
 
-.cabecera-color{
-    background-color: #0D4560 !important;
-    color: white;
+.linea1
+{
+    width: 100%;
+    height: 2px;
+    background-color: #146A93;
+    position: absolute;
+    bottom: 0;
+    border-radius: 10px;
+    margin-top: 10px;
 }
+
+.ContenedorPestaña {
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.contenidoP {
+    background-color: #1591CC;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.rectangle {
+    position: absolute;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #1A89BD;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+
+.ContenedorTotal {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.ContenedorTituloTabla {
+    margin-top: 20px;
+    width: 100%;
+}
+
+.nav-item {
+    border-top-left-radius: 10px;
+    background-color: #146A93;
+    border-top-right-radius: 10px;
+    margin-bottom: -5px;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+
+#tabla-tab {
+    font-size: 20px;
+}
+
