--- a/recursos/estilos/privado/trabajadores.css
+++ b/recursos/estilos/privado/trabajadores.css
@@ -89,11 +89,13 @@
     max-height: 100%;
 }
 
-.Contenedor-tabla 
-{
+.Contenedor-tabla {
     min-height: 100%;
-    max-height: 55vh;
+    max-height: 50vh;
     overflow-y: auto;
+    margin-right: 3.25rem;
+    margin-left: 3.25rem;
+    margin-bottom: 10px;
 }
 
 .contenedorBotones,
@@ -180,4 +182,75 @@
 
 .form1 {
     min-width: 100%;
+}
+
+.table thead th {
+    background-color: #0D4560;
+    color: white;
+    border: 0;
+    text-align: center;
+}
+
+.table {
+    border-top: 0px;
+}
+
+/*Sweet alert*/
+.swal2-popup {
+    font-family: "Titillium Web", sans-serif;
+}
+
+.swal2-title {
+    font-family: "Titillium Web", sans-serif;
+}
+
+.swal2-content {
+    font-family: "Titillium Web", sans-serif;
+}
+
+.swal2-actions button {
+    margin: 10px;
+    width: 100px;
+}
+
+/*PopUp de detalles*/
+
+.custom-swal-popup
+{
+    height: fit-content;
+    overflow-y: auto;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    justify-items: left;
+    font-size: 14px;
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.contenedorDetallesTrabajador
+{
+    width: 100%;
+    height: 100%;
+    background-color: #1A89BD;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: left;
+    color: black;
+
+}
+.contenedorFormD
+{
+    width: 90%;
+    height: fit-content;
+    background-color: white;
+    padding: 65px;
+    padding-top: 40px;
+    margin-bottom: 40px;
+    border-radius: 10px;
 }
