--- a/recursos/estilos/privado/plantilla.css
+++ b/recursos/estilos/privado/plantilla.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 430px) {
-    .collapse-fea {
+    .collapseFea {
         font-size: 17px;
         margin: 0px;
         text-align: center;
@@ -9,7 +9,7 @@
         font-style: normal;
     }
 
-    .collapse-admin {
+    .collapseAdmin {
         font-size: 15px;
         margin: 0px;
         text-align: center;
@@ -26,7 +26,7 @@
 }
 
 @media screen and (min-width: 431px) {
-    .collapse-fea {
+    .collapseFea {
         font-size: 20px;
         margin: 0px;
         text-align: center;
@@ -36,7 +36,7 @@
         font-style: normal;
     }
 
-    .collapse-admin {
+    .collapseAdmin {
         font-size: 20px;
         margin: 0px;
         text-align: center;
@@ -146,7 +146,6 @@ li {
     bottom: 0;
     width: 100%;
 }
-
 .lineah
 {
     width: 70%;
