--- a/recursos/estilos/privado/clientes.css
+++ b/recursos/estilos/privado/clientes.css
@@ -102,6 +102,12 @@
     background-color: #146A93;
 }
 
+.btn3 {
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #146A93;
+}
+
 .contenedorBotones2 {
     width: 100%;
     min-height: fit-content;
