--- a/recursos/estilos/privado/plantilla.css
+++ b/recursos/estilos/privado/plantilla.css
@@ -248,3 +248,16 @@ a.sidebar-link:hover {
     transform: rotate(45deg);
     transition: all .2s ease-out;
 }
+
+#sidebar::-webkit-scrollbar {
+    width: 12px; /* Ancho del scrollbar */
+}
+
+#sidebar::-webkit-scrollbar-thumb {
+    background-color: #146A93; /* Color del scrollbar */
+    border-radius: 10px; /* Borde redondeado del thumb */
+}
+
+#sidebar::-webkit-scrollbar-track {
+    background-color: #0D4560; /* Color de fondo del track */
+}
