--- a/recursos/estilos/privado/comentarios.css
+++ b/recursos/estilos/privado/comentarios.css
@@ -123,4 +123,68 @@ body {
     color: black;
 }
 
+.rectanguloP1 {
+    position: relative;
+    width: 80%;
+    height: 600px;
+    background-color: #D9D9D9;
+    border-radius: 50px;    
+}
 
+.InfoC {
+    color: #0D4560;
+    padding-left: 40px;
+    padding-top: 40px;
+    font-size: 40px;
+}
+
+.C1{
+    color: #000000;
+    padding-top: 30px;
+    padding-left: 35px;
+    font-size: 25px;
+}
+
+.C2{
+    color: #000000;
+    padding-top: 5px;
+    padding-left: 35px;
+    font-size: 25px;
+}
+
+.C3{
+    color: #000000;
+    padding-top: 5px;
+    padding-left: 35px;
+    font-size: 25px;
+}
+
+.ComentarioDetalle{
+    position: absolute;
+    padding: 100px;
+    padding-left: 10px;
+    padding-top: 10px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    box-shadow: 0 0 50px rgba(0,0,0,0.1);
+    height: 40%;
+    width: 95%;
+    top: 73%;
+    right: 50%;
+    transform: translate(50%, -50%);   
+}
+
+.CT1 {
+    color: #0D4560;
+    padding-left: 10px;
+    padding-top: 10px;
+    font-size: 30px;
+}
+
+.Comentario{
+    color: black;
+    font-size: 30px;
+    padding-top: 50px;
+    padding-left: 5px;
+    text-align: center;
+}
