--- a/recursos/estilos/privado/plantilla.css
+++ b/recursos/estilos/privado/plantilla.css
@@ -261,3 +261,8 @@ a.sidebar-link:hover {
 #sidebar::-webkit-scrollbar-track {
     background-color: #0D4560; /* Color de fondo del track */
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
