--- a/recursos/estilos/privado/comentarios.css
+++ b/recursos/estilos/privado/comentarios.css
@@ -125,37 +125,23 @@ body {
 .rectanguloP1 {
     position: relative;
     width: 80%;
-    height: 600px;
+    height: 600px; /* Ajusta la altura según sea necesario */
     background-color: #D9D9D9;
-    border-radius: 50px;
+    border-radius: 10px;
+    margin: 0 auto; /* Centrar horizontalmente */
 }
 
 .InfoC {
     color: #0D4560;
-    padding-left: 40px;
-    padding-top: 40px;
-    font-size: 40px;
+    padding: 20px; /* Ajuste del espaciado */
+    font-size: 2rem; /* Cambiado a unidades relativas */
 }
 
-.C1 {
+.C1, .C2, .C3 {
     color: #000000;
-    padding-top: 30px;
-    padding-left: 35px;
-    font-size: 25px;
-}
-
-.C2 {
-    color: #000000;
-    padding-top: 5px;
-    padding-left: 35px;
-    font-size: 25px;
-}
-
-.C3 {
-    color: #000000;
-    padding-top: 5px;
-    padding-left: 35px;
-    font-size: 25px;
+    padding: 10px 0;
+    padding-left: 20px;
+    font-size: 1.6rem; /* Cambiado a unidades relativas */
 }
 
 .ComentarioDetalle {
@@ -184,7 +170,7 @@ body {
     color: black;
     font-size: 30px;
     padding-top: 50px;
-    padding-left: 5px;
+    padding-left: 40px;
     text-align: center;
 }
 
@@ -206,7 +192,7 @@ body {
     color: #0D4560;
     position: absolute;
     top: 3%;
-    right: 29%;
+    right: 30%;
     font-size: 23px;
 }
 
@@ -216,34 +202,47 @@ body {
     right: 60%;
 }
 
-.DC{
-    position: relative;
-    width: 150px;
-    right: 75%;
-    font-size: 22px;
-    bottom: 170%;
+.DC {
+    font-size: 1.4rem;
+    padding: 10px 0;
+    margin-top: -100%;
+    margin-left: -80%;
 }
 
-.DC1{
-    position: relative;
-    width: 150px;
-    right: 75%;
-    font-size: 17px;
-    bottom: 200%;
+.DC1 {
+    font-size: 1.4rem;
+    padding: 10px 0;
+    margin-top: -32%;
+    margin-left: -80%;
 }
 
-.DC2{
-    position: relative;
-    width: 150px;
-    right: 75%;
-    font-size: 17px;
-    bottom: 220%;
+.DC2 {
+    font-size: 1.4rem;
+    padding: 10px 0;
+    margin-top: -32%;
+    margin-left: -80%;
 }
 
-.DC3{
+.DC3 {
+    font-size: 1.4rem;
+    padding: 10px 0;
+    margin-top: -36%;
+    margin-left: -80%;
+}
+
+.btn.btn-primary {
+    background-color: #0D4560;
+    color: #ffffff;
+    border: none;
+    padding: 4px 70px;
+    position: absolute;
+    font-size: 15px;
+    top: 132%;
+    left: 94%; /* Mover el botón hacia la derecha */
+    transform: translate(-50%, -50%);
+}
+
+.contenedor-botones {
     position: relative;
-    width: 150px;
-    right: 75%;
-    font-size: 17px;
-    bottom: 245%;
+    width: 100%;
 }
