--- a/recursos/estilos/privado/marcas.css
+++ b/recursos/estilos/privado/marcas.css
@@ -99,3 +99,21 @@ h1
     padding-left: 50px;
     padding-right: 50px;
 }
+.btn3, .btn2 {
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #146A93;
+    border: solid 0px;
+}
+.btn2
+{
+    background-color: white;
+    color: black;
+    border: #8F8F8F solid 1px;
+}
+.modal-content{
+    background-color: #1A89BD;
+    color: white;
+}
