--- a/recursos/estilos/privado/pedidos.css
+++ b/recursos/estilos/privado/pedidos.css
@@ -115,7 +115,7 @@
     box-shadow: none;
 }
 
-/* Estilos para la información de un repartidor */
+/* Estilos para la información de los pedidos de la info del repartidor */
 #infoDeRepartidor {
     display: flex;
     flex-direction: row;
@@ -123,6 +123,40 @@
     align-items: center;
     margin-left: 300px;
 }
+
+#infoDeRepartidor2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 300px;
+}
+
+#infoDeRepartidor3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 300px;
+}
+
+#infoDelClienteParaRepartidor{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 300px;
+}
+
+/* Estilos para la información del repartidor */
+#infoDeRepartidorDelApartadoDelRepartidor{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 300px;
+}
+
 
 /* Estilos para la imagen de un repartidor */
 #infoDeRepartidor img {
@@ -140,6 +174,16 @@
     z-index: 0;
 }
 
+#contenedorDelAcordionSoloHeaderAndBody2{
+    border-top: 1px solid #0D4560;
+    border-left: 1px solid #0D4560;
+    border-right: 1px solid #0D4560;
+    border-bottom: 1px solid #0D4560;
+    background-color: #EDEDED;
+    position: relative;
+    z-index: 0;
+}
+
 /* Estilos para un botón de acordeón */
 .accordion-button {
     border-left: 1px solid #0D4560;
@@ -149,6 +193,16 @@
     z-index: 2;
     position: relative;
     background-color: white;
+}
+
+.accordionButtonRepartidor{
+    border-left: 1px solid #0D4560;
+    border-right: 1px solid #0D4560;
+    border-bottom: 1px solid #0D4560;
+    margin-top: -1px;
+    z-index: 2;
+    position: relative;
+    background-color: #EDEDED;
 }
 
 /* Estilos el div de numero de pedido */
@@ -162,9 +216,20 @@
     background-color: white;
 }
 
+#idPedidoNum2 {
+    border-left: 1px solid #0D4560;
+    border-right: 1px solid #0D4560;
+    border-top: 1px solid #0D4560;
+    margin-bottom: -1px;
+    z-index: 2;
+    position: relative;
+    background-color: #EDEDED;
+}
+
 /* Estilos para un contenedor de tarjetas de pedido con scroll */
 #contenedorDeLasCardsDePedido {
-    max-height: 400px;
+    max-height: 500px;
+    margin-top: 10px;
     overflow-y: auto;
     scrollbar-width: auto;
     /* para navegadores que no son WebKit */
